--- a/index.html
+++ b/index.html
@@ -13,6 +13,31 @@ title: Cobbler - Linux install and update server
   
   <h1>Learn about Cobbler</h1>
   <ul class="posts">
+
+<p>
+Cobbler is a Linux installation server that allows for rapid setup of network installation environments. It glues together and automates many associated Linux tasks so you do not have to hop between lots of various commands and applications when rolling out new systems, and, in some cases, changing existing ones.
+</p>
+
+<p>
+With a simple series of commands, network installs can be configured for PXE, OS reinstallations, media-based net-installs, and virtualized installs.  Cobbler uses a helper program called 'koan' (which interacts with Cobbler) for reinstallation and virtualization support.  If just managing machines from PXE, koan is largely optional.
+</p>
+
+<p>
+Cobbler is a small and lightweight application (about 15k lines of Python code). It tries to be extremely simple to use both for very small and very large installations -- as well as easy to work on, extend, and hack. It avoids being "enterprisey" (as in complicated) whenever possible, but is highly useful in all sorts of enterprises by having a lot of advanced features and doing small things to save a large amount of time in repeated tasks.
+</p>
+
+<p>
+Cobbler can also optionally help with managing DHCP, DNS, and yum package mirroring infrastructure -- in this regard, it is a more generalized automation app, rather than just dealing specifically with installations. There is also a lightweight built-in configuration management system, as well as support for integrating with configuration management systems like Puppet or Chef. 
+</p>
+
+<p>
+Cobbler has a command line interface, a web interface (screenshot), and also several API access options. That sounds like a lot, but it's really pretty simple. New users may like to start with the web app after doing the initial setup steps on the command line (cobbler check; cobbler import) as it will give them a good idea of all of the features available. Advanced features don't have to be understood all at once, they can be incorporated over time as the need for them arises.
+</p>
+
+<p>
+While you don't need to be a developer to understand Cobbler, Cobbler is focused on building a community of developer-admins.  We aim for a very easy to understand codebase that can quickly absorb features from any proprietary systems you may already have, so that we may build one that we can all share.  You can read more at the various links below to understand all that Cobbler can do.
+</p>
+
   </ul>
 
   <h1>Get the Source</h1>
