--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@ title: Cobbler - Linux install and update server
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
   
   <h1>About Cobbler</h1>
   <ul class="posts">
@@ -17,22 +11,35 @@ title: Cobbler - Linux install and update server
 Cobbler is a Linux installation server that allows for rapid setup of network installation environments. It glues together and automates many associated Linux tasks so you do not have to hop between lots of various commands and applications when rolling out new systems, and, in some cases, changing existing ones.  It can help with
 installation, DNS, DHCP, package updates, power management, configuration management orchestration, and much more.
 </p>
-  </ul>
 
-  <h1>Introduction to Cobbler</h1>
-  <ul class="posts">
-    {% for post in site.introdocs %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<p>
+Cobbler is a Linux installation server that allows for rapid setup of network installation environments. It glues together and automates many associated Linux tasks so you do not have to hop between lots of various commands and applications when rolling out new systems, and, in some cases, changing existing ones.
+</p>
+</ul>
 
-  <h1>Get the Source</h1>
-  <ul class="posts">
-    <li><a href="http://github.com/cobbler/cobbler">Cobbler</a></li>
-    <li><a href="http://github.com/cobbler/cobbler.github.com">Documentation Site</a></li>
-  </ul>
+  <h1>Light & Powerful</h1>
+<ul class="posts">
+<p>
+With a simple series of commands, network installs can be configured for PXE, reinstallations, media-based net-installs, and virtualized installs (supporting Xen, qemu, KVM, and some variants of VMware). Cobbler uses a helper program called 'koan' (which interacts with Cobbler) for reinstallation and virtualization support.
+</p>
+</ul>
 
-  <h1>Read the Documentation</h1>
-  <ul class="posts">
-  </ul>
+  <h1>DevOps Friendly</h1>
+<ul class="posts">
+<p>
+Cobbler is a small and lightweight application (about 15k lines of Python code). It tries to be extremely simple to use both for very small and very large installations -- as well as easy to work on, extend, and hack. It avoids being "enterprisey" (as in complicated) whenever possible, but is highly useful in all sorts of enterprises by having a lot of advanced features and doing small things to save a large amount of time in repeated tasks.
+</p>
+</ul>
+
+<h1>Batteries Included</h1>
+<ul class="posts">
+<p>
+Cobbler can also optionally help with managing DHCP, DNS, and yum package mirroring infrastructure -- in this regard, it is a more generalized automation app, rather than just dealing specifically with installations. There is also a lightweight built-in configuration management system, as well as support for integrating with configuration management systems like Puppet. Cobbler has a command line interface, a web interface (screenshot), and also several API access options. That sounds like a lot, but it's really pretty simple. New users may like to start with the web app after doing the initial setup steps on the command line (cobbler check; cobbler import) as it will give them a good idea of all of the features available. Advanced features don't have to be understood all at once, they can be incorporated over time as the need for them arises.
+</p>
+</ul>
+
+<p>
+You can read more at the various links below to understand all that Cobbler can do.
+</p>
+
 </div>
