--- a/manuals/2.2.3/3/1_-_Prerequisites.html
+++ b/manuals/2.2.3/3/1_-_Prerequisites.html
@@ -50,16 +50,66 @@ var WRInitTime=(new Date()).getTime();
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/1_-_Prerequisites.html">1 - Prerequisites</a></li><li><a href="/manuals/2.2.3/3/2_-_Installing_From_Packages.html">2 - Installing From Packages</a></li><li><a href="/manuals/2.2.3/3/3_-_Installing_From_Source.html">3 - Installing From Source</a></li><li><a href="/manuals/2.2.3/3/4_-_Relocating_Your_Installation.html">4 - Relocating Your Installation</a></li><li><a href="/manuals/2.2.3/3/5_-_Installation_Notes.html">5 - Installation Notes</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/1_-_Prerequisites.html">1 - Prerequisites</a></li><li><a href="/manuals/2.2.3/3/2_-_Installing_From_Packages.html">2 - Installing From Packages</a></li><li><a href="/manuals/2.2.3/3/3_-_Installing_From_Source.html">3 - Installing From Source</a></li><li><a href="/manuals/2.2.3/3/4_-_Configuration_Files.html">4 - Configuration Files</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">4.1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">4.2 - Modules Configuration</a></li></ul><li><a href="/manuals/2.2.3/3/5_-_Relocating_Your_Installation.html">5 - Relocating Your Installation</a></li><li><a href="/manuals/2.2.3/3/6_-_Installation_Notes.html">6 - Installation Notes</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h1>Prerequisites for Installation</h1>
 
 <p>Cobbler has both definite and optional prerequisites, based on the features you'd like to use. This section documents the definite prerequisites for both a basic installation and when building/installing from source. Please see the <a href="/manuals/2.2.3/4/3_-_Managing_Services_With_Cobbler.html">Managing Services With Cobbler</a> section for details on the prerequisites for managing services, and other sections may make note of other package requirements.</p>
 
-<h2>Package Prerequisites</h2>
+<p>Please note that installing any of the packages here via a package manager (such as yum or apt) can and will require a large number of ancilary packages, which we do not document here. The package definition should automatically pull these packages in and install them along with cobbler, however it is always best to verify these requirements have been met prior to installing cobbler or any of its components.</p>
+
+<h2>Cobbler/Cobblerd</h2>
+
+<p>First and foremost, cobbler requires Python. Any version over 2.3 should work, though 2.4+ is best. Cobbler also requires the installation of the following packages:</p>
+
+<ul>
+<li>createrepo</li>
+<li>httpd (apache2 for Debian/Ubuntu)</li>
+<li>mkisofs</li>
+<li>mod_wsgi (libapache2-mod-wsgi for Debian/Ubuntu)</li>
+<li>python-cheetah</li>
+<li>python-netaddr</li>
+<li>python-simplejson</li>
+<li>python-urlgrabber</li>
+<li>PyYAML (python-yaml for Debian/Ubuntu)</li>
+<li>rsync</li>
+<li>tftp-server (atftpd for Debian/Ubuntu, though others <em>may</em> work)</li>
+<li>yum-utils</li>
+</ul>
+
+
+<h2>Cobbler-Web</h2>
+
+<p>Cobbler web only has one other requirement besides cobbler itself:</p>
+
+<ul>
+<li>Django (python-django for Debian/Ubuntu)</li>
+</ul>
+
+
+<p>Future versions of cobbler-web may allow for installation on a host not running cobblerd, however that is not currently the case.</p>
+
+<h2>Koan</h2>
+
+<p>Koan can be installed apart from cobblerd, and has only the following requirement (besides python itself of course):</p>
+
+<ul>
+<li>python-simplejson</li>
+</ul>
+
 
 <h2>Source Prerequisites</h2>
+
+<p>Installation from source requires the following additional packages:</p>
+
+<ul>
+<li>git</li>
+<li>make</li>
+<li>python-devel</li>
+<li>python-setuptools</li>
+</ul>
+
 
      <div id="push"></div> <!-- push -->
     </div> <!-- content -->
