--- a/manuals/2.2.3/3/3_-_Installing_From_Source.html
+++ b/manuals/2.2.3/3/3_-_Installing_From_Source.html
@@ -50,7 +50,7 @@ var WRInitTime=(new Date()).getTime();
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/1_-_Prerequisites.html">1 - Prerequisites</a></li><li><a href="/manuals/2.2.3/3/2_-_Installing_From_Packages.html">2 - Installing From Packages</a></li><li><a href="/manuals/2.2.3/3/3_-_Installing_From_Source.html">3 - Installing From Source</a></li><li><a href="/manuals/2.2.3/3/4_-_Relocating_Your_Installation.html">4 - Relocating Your Installation</a></li><li><a href="/manuals/2.2.3/3/5_-_Installation_Notes.html">5 - Installation Notes</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/1_-_Prerequisites.html">1 - Prerequisites</a></li><li><a href="/manuals/2.2.3/3/2_-_Installing_From_Packages.html">2 - Installing From Packages</a></li><li><a href="/manuals/2.2.3/3/3_-_Installing_From_Source.html">3 - Installing From Source</a></li><li><a href="/manuals/2.2.3/3/4_-_Configuration_Files.html">4 - Configuration Files</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">4.1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">4.2 - Modules Configuration</a></li></ul><li><a href="/manuals/2.2.3/3/5_-_Relocating_Your_Installation.html">5 - Relocating Your Installation</a></li><li><a href="/manuals/2.2.3/3/6_-_Installation_Notes.html">6 - Installation Notes</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h2>Download Instructions</h2>
