--- a/manuals/2.2.3/3/4_-_Configuration_Files.html
+++ b/manuals/2.2.3/3/4_-_Configuration_Files.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Installing Cobbler</title>
+   <title>Configuration Files</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -50,12 +50,18 @@ var WRInitTime=(new Date()).getTime();
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/1_-_Prerequisites.html">1 - Prerequisites</a></li><li><a href="/manuals/2.2.3/3/2_-_Installing_From_Packages.html">2 - Installing From Packages</a></li><li><a href="/manuals/2.2.3/3/3_-_Installing_From_Source.html">3 - Installing From Source</a></li><li><a href="/manuals/2.2.3/3/4_-_Configuration_Files.html">4 - Configuration Files</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">4.1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">4.2 - Modules Configuration</a></li></ul><li><a href="/manuals/2.2.3/3/5_-_Relocating_Your_Installation.html">5 - Relocating Your Installation</a></li><li><a href="/manuals/2.2.3/3/6_-_Installation_Notes.html">6 - Installation Notes</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-<h1>Installing Cobbler</h1>
+<h2>Cobbler Configuration Files</h2>
 
-<p>Cobbler is available for installation in several different ways, through packaging systems for each distribution or directly from source.</p>
+<p>Cobbler has many configuration files, however only a few typically need be modified for basic functionality:</p>
+
+<ul>
+<li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">/etc/cobbler/settings</a></li>
+<li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">/etc/cobbler/modules.conf</a></li>
+</ul>
+
 
      <div id="push"></div> <!-- push -->
     </div> <!-- content -->
