--- a/manuals/2.2.3/3/5_-_Relocating_Your_Installation.html
+++ b/manuals/2.2.3/3/5_-_Relocating_Your_Installation.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Installing Cobbler</title>
+   <title>Cobbler Manual - Relocating Your Installation</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -53,9 +53,37 @@ var WRInitTime=(new Date()).getTime();
 <div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/1_-_Prerequisites.html">1 - Prerequisites</a></li><li><a href="/manuals/2.2.3/3/2_-_Installing_From_Packages.html">2 - Installing From Packages</a></li><li><a href="/manuals/2.2.3/3/3_-_Installing_From_Source.html">3 - Installing From Source</a></li><li><a href="/manuals/2.2.3/3/4_-_Configuration_Files.html">4 - Configuration Files</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">4.1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">4.2 - Modules Configuration</a></li></ul><li><a href="/manuals/2.2.3/3/5_-_Relocating_Your_Installation.html">5 - Relocating Your Installation</a></li><li><a href="/manuals/2.2.3/3/6_-_Installation_Notes.html">6 - Installation Notes</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-<h1>Installing Cobbler</h1>
+<h2>Relocating Your Installation</h2>
 
-<p>Cobbler is available for installation in several different ways, through packaging systems for each distribution or directly from source.</p>
+<p>Often folks don't have a very large /var partition, which is what
+cobbler uses by default for mirroring install trees and the like.</p>
+
+<p>You'll notice you can reconfigure the webdir location just by going
+into /etc/cobbler/settings, but it's not the best way to do things
+-- especially as the RPM packaging does include some files and
+directories in the stock path. This means that, for upgrades and
+the like, you'll be breaking things somewhat. Rather than
+attempting to reconfigure cobbler, your Apache configuration, your
+file permissions, and your SELinux rules, the recommended course of
+action is very simple.</p>
+
+<p>\1. Copy everything you have already in /var/www/cobbler to another
+ location -- for instance, /opt/cobbler_data</p>
+
+<p>\2. Now just create a symlink or bind mount at /var/www/cobbler
+ that points to /opt/cobbler_data.</p>
+
+<p>Done. You're up and running.</p>
+
+<p>NOTE: If you decided to access cobbler's data store over NFS (not
+recommended) you really want to mount NFS on /var/www/cobbler with
+SELinux context passed in as a parameter to mount versus the
+symlink. You may also have to deal with problems related to
+rootsquash. However if you are making a mirror of a Cobbler server
+for a multi-site setup, mounting read only is ok there.</p>
+
+<p>ALSO NOTE: /var/lib/cobbler can not live on NFS, as this interferes
+with locking ("flock") cobbler does around it's storage files.</p>
 
      <div id="push"></div> <!-- push -->
     </div> <!-- content -->
