Hiding search for now

--- a/manuals/2.2.3/index.html
+++ b/manuals/2.2.3/index.html
@@ -35,9 +35,11 @@ var WRInitTime=(new Date()).getTime();
 <div id="wrapper">
   <div id="header">
     <div id="logodiv"><img id="logo" src="/images/logo-cobbler.png" alt="logo" /></div>
+    <!-- no search yet
     <div id="searchdiv">
       <input id="searchbox" class="search" type="text" /><input id="searchbutton" class="search" type="button" value="search" onclick="javascript:run_search();" />
     </div>
+    -->
   </div>
   <div id="container">
     <div id="leftcol">
