Initial work on quickstart guide and some minor css tweaks * quickstart needs to be changed to use dnsmasq instead - it's much quicker and easier to setup

--- a/manuals/2.2.3/3/4/2_-_Modules_Configuration.html
+++ b/manuals/2.2.3/3/4/2_-_Modules_Configuration.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>/etc/cobbler/modules.conf</title>
+   <title>Modules Configuration</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -106,7 +106,7 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings_File.html">1 - Settings File</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h2>Modules Configuration - /etc/cobbler/modules.conf</h2>
