--- a/manuals/2.2.3/3/4_-_Configuration_Files.html
+++ b/manuals/2.2.3/3/4_-_Configuration_Files.html
@@ -106,7 +106,7 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings_File.html">1 - Settings File</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h2>Cobbler Configuration Files</h2>
@@ -114,8 +114,8 @@ function close_results() {
 <p>Cobbler has many configuration files, however only a few typically need be modified for basic functionality:</p>
 
 <ul>
-<li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">/etc/cobbler/settings</a></li>
-<li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">/etc/cobbler/modules.conf</a></li>
+<li><a href="/manuals/2.2.3/3/4/1_-_Settings_File.html">Settings File</a></li>
+<li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">Modules Configuration</a></li>
 </ul>
 
 
