--- a/manuals/2.2.3/6_-_Web_Interface.html
+++ b/manuals/2.2.3/6_-_Web_Interface.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Cobbler Web Interface</title>
+   <title>Cobbler Web User Interface</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
