--- a/manuals/2.2.3/3/4/1_-_Settings_File.html
+++ b/manuals/2.2.3/3/4/1_-_Settings_File.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>/etc/cobbler/settings</title>
+   <title>Settings File</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -106,10 +106,10 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings.html">1 - Settings</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/3/4/1_-_Settings_File.html">1 - Settings File</a></li><li><a href="/manuals/2.2.3/3/4/2_-_Modules_Configuration.html">2 - Modules Configuration</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-<h2>Settings - /etc/cobbler/settings</h2>
+<h2>Settings File - /etc/cobbler/settings</h2>
 
 <p>The main settings file for cobbler is /etc/cobbler/settings. This file is YAML-formatted, so take care when hand-editing this file as an invalid formatting can render both the command-line utility and cobblerd inoperable.</p>
 
