--- a/manuals/2.2.3/4/6/1_-_Import.html
+++ b/manuals/2.2.3/4/6/1_-_Import.html
@@ -108,7 +108,7 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/6/1_-_Import.html">1 - Import</a></li><li><a href="/manuals/2.2.3/4/6/2_-_Build_ISO.html">2 - Build ISO</a></li><li><a href="/manuals/2.2.3/4/6/3_-_Command_Line_Search.html">3 - Command Line Search</a></li><li><a href="/manuals/2.2.3/4/6/4_-_Replication.html">4 - Replication</a></li><li><a href="/manuals/2.2.3/4/6/5_-_Sync.html">5 - Sync</a></li><li><a href="/manuals/2.2.3/4/6/6_-_Validate_Kickstart.html">6 - Validate Kickstart</a></li><li><a href="/manuals/2.2.3/4/6/7_-_ACL_Setup.html">7 - ACL Setup</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/6/1_-_Import.html">1 - Import</a></li><li><a href="/manuals/2.2.3/4/6/2_-_Sync.html">2 - Sync</a></li><li><a href="/manuals/2.2.3/4/6/3_-_Reposync.html">3 - Reposync</a></li><li><a href="/manuals/2.2.3/4/6/4_-_Build_ISO.html">4 - Build ISO</a></li><li><a href="/manuals/2.2.3/4/6/5_-_Command_Line_Search.html">5 - Command Line Search</a></li><li><a href="/manuals/2.2.3/4/6/6_-_Replication.html">6 - Replication</a></li><li><a href="/manuals/2.2.3/4/6/7_-_Validate_Kickstart.html">7 - Validate Kickstart</a></li><li><a href="/manuals/2.2.3/4/6/8_-_ACL_Setup.html">8 - ACL Setup</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h1>Cobbler Import</h1>
