--- a/manuals/2.2.3/4/6/2_-_Sync.html
+++ b/manuals/2.2.3/4/6/2_-_Sync.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Cobbler Manual</title>
+   <title>Cobbler Sync</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -108,10 +108,10 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/3/Managing_rsync.html">Managing rsync</a></li><li><a href="/manuals/2.2.3/4/3/Managing_TFTP.html">Managing TFTP</a></li><li><a href="/manuals/2.2.3/4/3/1_-_Managing_DHCP.html">1 - Managing DHCP</a></li><li><a href="/manuals/2.2.3/4/3/2_-_Managing_DNS.html">2 - Managing DNS</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/6/1_-_Import.html">1 - Import</a></li><li><a href="/manuals/2.2.3/4/6/2_-_Sync.html">2 - Sync</a></li><li><a href="/manuals/2.2.3/4/6/3_-_Reposync.html">3 - Reposync</a></li><li><a href="/manuals/2.2.3/4/6/4_-_Build_ISO.html">4 - Build ISO</a></li><li><a href="/manuals/2.2.3/4/6/5_-_Command_Line_Search.html">5 - Command Line Search</a></li><li><a href="/manuals/2.2.3/4/6/6_-_Replication.html">6 - Replication</a></li><li><a href="/manuals/2.2.3/4/6/7_-_Validate_Kickstart.html">7 - Validate Kickstart</a></li><li><a href="/manuals/2.2.3/4/6/8_-_ACL_Setup.html">8 - ACL Setup</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-
+<h1>Cobbler Sync</h1>
 
      <div id="push"></div> <!-- push -->
     </div> <!-- content -->
