--- a/manuals/2.2.3/Appendix/D_-_Tips_for_RHN.html
+++ b/manuals/2.2.3/Appendix/D_-_Tips_for_RHN.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Cobbler Manual</title>
+   <title>Tips For RHN</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -111,6 +111,8 @@ function close_results() {
 <div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/Appendix/A_-_API.html">A - API</a></li><li><a href="/manuals/2.2.3/Appendix/C_-_Power-PC_Support.html">C - Power-PC Support</a></li><li><a href="/manuals/2.2.3/Appendix/D_-_Tips_for_RHN.html">D - Tips for RHN</a></li><li><a href="/manuals/2.2.3/Appendix/B_-_S390_Support.html">B - S390 Support</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
+<h1>Tips For RHN</h1>
+
 <p>If you're deploying RHEL, there are a few extra kickstart and Cobbler tricks you can employ to make provisioning a snap, all consolidated in one place...</p>
 
 <h3>Importing</h3>
