--- a/manuals/2.2.3/4/3/1_-_Managing_DHCP.html
+++ b/manuals/2.2.3/4/3/1_-_Managing_DHCP.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Cobbler Manual</title>
+   <title>Managing DHCP</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -108,10 +108,10 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/3/Managing_rsync.html">Managing rsync</a></li><li><a href="/manuals/2.2.3/4/3/Managing_yum_repos.html">Managing yum repos</a></li><li><a href="/manuals/2.2.3/4/3/Managing_TFTP.html">Managing TFTP</a></li><li><a href="/manuals/2.2.3/4/3/1_-_Managing_DHCP.html">1 - Managing DHCP</a></li><li><a href="/manuals/2.2.3/4/3/2_-_Managing_DNS.html">2 - Managing DNS</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/3/Managing_rsync.html">Managing rsync</a></li><li><a href="/manuals/2.2.3/4/3/Managing_TFTP.html">Managing TFTP</a></li><li><a href="/manuals/2.2.3/4/3/1_-_Managing_DHCP.html">1 - Managing DHCP</a></li><li><a href="/manuals/2.2.3/4/3/2_-_Managing_DNS.html">2 - Managing DNS</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-<h1>DHCP Management</h1>
+<h1>Managing DHCP</h1>
 
 <p>You may want cobbler to manage the DHCP entries of its client systems. It currently supports either ISC DHCP or dnsmasq (which, despite the name, supports DHCP). Cobbler also has the ability to handle <a href="DNS%20Management">DNS Management</a>.</p>
 
