--- a/manuals/2.2.3/4/6_-_Cobbler_Commands.html
+++ b/manuals/2.2.3/4/6_-_Cobbler_Commands.html
@@ -34,7 +34,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div id="wrapper">
   <div id="header">
-    <div id="logodiv"><img id="logo" src="/images/logo-cobbler.png" alt="logo" /></div>
+    <img id="logo" src="/images/logo-cobbler.png" alt="logo" />
     <div id="searchdiv">
 <script type="text/javascript">
 function do_search() {
@@ -83,7 +83,7 @@ function close_results() {
       </div>
     </div>
 
-  </div>
+  </div> <!-- header -->
   <div id="container">
     <div id="leftcol">
 <div id="mainmenu" class="menu">
@@ -106,20 +106,17 @@ function close_results() {
   </ul>
 </div>
 
-    </div>
+    </div> <!-- leftcol -->
     <div id="rightcol">
-     <div id="twitter">
-      <a href="https://twitter.com/cobblerista" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @cobblerista</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-     </div>
-    </div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/6/1_-_Import.html">1 - Import</a></li><li><a href="/manuals/2.2.3/4/6/2_-_Sync.html">2 - Sync</a></li><li><a href="/manuals/2.2.3/4/6/3_-_Reposync.html">3 - Reposync</a></li><li><a href="/manuals/2.2.3/4/6/4_-_Build_ISO.html">4 - Build ISO</a></li><li><a href="/manuals/2.2.3/4/6/5_-_Command_Line_Search.html">5 - Command Line Search</a></li><li><a href="/manuals/2.2.3/4/6/6_-_Replication.html">6 - Replication</a></li><li><a href="/manuals/2.2.3/4/6/7_-_Validate_Kickstart.html">7 - Validate Kickstart</a></li><li><a href="/manuals/2.2.3/4/6/8_-_ACL_Setup.html">8 - ACL Setup</a></li></ul></div>
+    </div> <!-- rightcol -->
     <div id="content">
 <h1>Cobbler Commands</h1>
 
-    <div id="push"></div>
-    </div>
-  </div>
-</div>
+     <div id="push"></div> <!-- push -->
+    </div> <!-- content -->
+  </div> <!-- container -->
+</div> <!-- wrapper -->
 
 <div id="footer">
   <div class="contact">&copy; 2012</div>
