--- a/manuals/2.2.3/5/20_-_Data_Revision_Control.html
+++ b/manuals/2.2.3/5/20_-_Data_Revision_Control.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Cobbler Manual</title>
+   <title>Data Revision Control</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -108,46 +108,12 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/4/6/1_-_Import.html">1 - Import</a></li><li><a href="/manuals/2.2.3/4/6/2_-_Build_ISO.html">2 - Build ISO</a></li><li><a href="/manuals/2.2.3/4/6/3_-_Command_Line_Search.html">3 - Command Line Search</a></li><li><a href="/manuals/2.2.3/4/6/4_-_Replication.html">4 - Replication</a></li><li><a href="/manuals/2.2.3/4/6/5_-_Sync.html">5 - Sync</a></li><li><a href="/manuals/2.2.3/4/6/6_-_Validate_Kickstart.html">6 - Validate Kickstart</a></li><li><a href="/manuals/2.2.3/4/6/7_-_ACL_Setup.html">7 - ACL Setup</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/5/1_-_Advanced_Networking.html">1 - Advanced Networking</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/1/1_-_Bonding.html">1.1 - Bonding</a></li><li><a href="/manuals/2.2.3/5/1/2_-_VLANs.html">1.2 - VLANs</a></li><li><a href="/manuals/2.2.3/5/1/3_-_Bridging.html">1.3 - Bridging</a></li></ul><li><a href="/manuals/2.2.3/5/2_-_SELinux.html">2 - SELinux</a></li><li><a href="/manuals/2.2.3/5/3_-_Configuration_Management.html">3 - Configuration Management</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/3/1_-_Built-In_Configuration_Management.html">3.1 - Built-In Configuration Management</a></li><li><a href="/manuals/2.2.3/5/3/2_-_Puppet_Integration.html">3.2 - Puppet Integration</a></li><li><a href="/manuals/2.2.3/5/3/3_-_Func_Integration.html">3.3 - Func Integration</a></li></ul><li><a href="/manuals/2.2.3/5/4_-_Anaconda_Monitoring.html">4 - Anaconda Monitoring</a></li><li><a href="/manuals/2.2.3/5/5_-_Extending_Cobbler.html">5 - Extending Cobbler</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/5/1_-_Triggers.html">5.1 - Triggers</a></li><li><a href="/manuals/2.2.3/5/5/2_-_Modules.html">5.2 - Modules</a></li><li><a href="/manuals/2.2.3/5/5/3_-_Extending_Cheetah.html">5.3 - Extending Cheetah</a></li></ul><li><a href="/manuals/2.2.3/5/6_-_Power_Management.html">6 - Power Management</a></li><li><a href="/manuals/2.2.3/5/7_-_Alternative_Template_Formats.html">7 - Alternative Template Formats</a></li><li><a href="/manuals/2.2.3/5/8_-_Multi-Homed_Cobbler_Servers.html">8 - Multi-Homed Cobbler Servers</a></li><li><a href="/manuals/2.2.3/5/9_-_Memtest.html">9 - Memtest</a></li><li><a href="/manuals/2.2.3/5/10_-_Virtual_Image_Cloning.html">10 - Virtual Image Cloning</a></li><li><a href="/manuals/2.2.3/5/11_-_Auto-Registration.html">11 - Auto-Registration</a></li><li><a href="/manuals/2.2.3/5/12_-_Booting_Live_CDs.html">12 - Booting Live CDs</a></li><li><a href="/manuals/2.2.3/5/13_-_Clonezilla_Integration.html">13 - Clonezilla Integration</a></li><li><a href="/manuals/2.2.3/5/14_-_Batch_Editing.html">14 - Batch Editing</a></li><li><a href="/manuals/2.2.3/5/15_-_Moving_to_a_New_Server.html">15 - Moving to a New Server</a></li><li><a href="/manuals/2.2.3/5/16_-_PXE-boot_Menu_Passwords.html">16 - PXE-boot Menu Passwords</a></li><li><a href="/manuals/2.2.3/5/17_-_System_Retirement.html">17 - System Retirement</a></li><li><a href="/manuals/2.2.3/5/18_-_Alternative_Storage_Backends.html">18 - Alternative Storage Backends</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/18/1_-_CouchDB.html">18.1 - CouchDB</a></li><li><a href="/manuals/2.2.3/5/18/2_-_MongoDB.html">18.2 - MongoDB</a></li></ul><li><a href="/manuals/2.2.3/5/19_-_Using_gPXE.html">19 - Using gPXE</a></li><li><a href="/manuals/2.2.3/5/20_-_Data_Revision_Control.html">20 - Data Revision Control</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-<p>Often an environment cannot support PXE because of either (A) an
-unfortunate lack of control over DHCP configurations (i.e. another
-group owns DHCP and won't give you a next-server entry), or (B) you
-are using static IPs only.</p>
+<h1>Data Revision Control</h1>
 
-<p>This is easily solved:</p>
-
-<pre><code># cobbler buildiso
-</code></pre>
-
-<p>What this command does is to copy all distro kernel/initrds onto a
-boot CD image and generate a menu for the ISO that is essentially
-equivalent to the PXE menu provided to net-installing machines via
-Cobbler.</p>
-
-<p>By default, the boot CD menu will include all profiles and systems,
-you can force it to display a list of profiles/systems in concern
-with the following.</p>
-
-<p>Cobbler versions >= 2.2.0:</p>
-
-<pre><code># cobbler buildiso --systems="system1 system2 system3"
-# cobbler buildiso --profiles="profile1 profile2 profile3"
-</code></pre>
-
-<p>Cobbler versions &lt; 2.2.0:</p>
-
-<pre><code># cobbler buildiso --systems="system1,system2,system3"
-# cobbler buildiso --profiles="profile1,profile2,profile3"
-</code></pre>
-
-<p>If you need to install into a lab (or other environment) that does not have network
-access to the cobbler server, you can also copy a full distribution tree plus profile
-and system records onto a disk image:</p>
-
-<pre><code># cobbler buildiso --standalone --distro="distro1"
-</code></pre>
+<p>Coming soon...</p>
 
      <div id="push"></div> <!-- push -->
     </div> <!-- content -->
