--- a/manuals/2.2.3/5/3/3_-_Func_Integration.html
+++ b/manuals/2.2.3/5/3/3_-_Func_Integration.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Cobbler Manual</title>
+   <title>Func Integration</title>
    <meta name="author" content="Cobbler development team" />
 
    <!-- Homepage CSS -->
@@ -111,7 +111,7 @@ function close_results() {
 <div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/5/3/1_-_Built-In_Configuration_Management.html">1 - Built-In Configuration Management</a></li><li><a href="/manuals/2.2.3/5/3/2_-_Puppet_Integration.html">2 - Puppet Integration</a></li><li><a href="/manuals/2.2.3/5/3/3_-_Func_Integration.html">3 - Func Integration</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
-<h2>Func</h2>
+<h1>Func Integration</h1>
 
 <p>Func is a neat tool, (which, in full disclosure, Michael had a part
 in creating). Read all about it at
