--- a/manuals/2.2.3/5/6_-_Power_Management.html
+++ b/manuals/2.2.3/5/6_-_Power_Management.html
@@ -108,164 +108,12 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/5/1_-_Advanced_Networking.html">1 - Advanced Networking</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/1/1_-_Bonding.html">1.1 - Bonding</a></li><li><a href="/manuals/2.2.3/5/1/2_-_VLANs.html">1.2 - VLANs</a></li><li><a href="/manuals/2.2.3/5/1/3_-_Bridging.html">1.3 - Bridging</a></li></ul><li><a href="/manuals/2.2.3/5/2_-_SELinux.html">2 - SELinux</a></li><li><a href="/manuals/2.2.3/5/3_-_Configuration_Management.html">3 - Configuration Management</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/3/1_-_Built-In_Configuration_Management.html">3.1 - Built-In Configuration Management</a></li><li><a href="/manuals/2.2.3/5/3/2_-_Puppet_Integration.html">3.2 - Puppet Integration</a></li><li><a href="/manuals/2.2.3/5/3/3_-_Func_Integration.html">3.3 - Func Integration</a></li></ul><li><a href="/manuals/2.2.3/5/4_-_Anaconda_Monitoring.html">4 - Anaconda Monitoring</a></li><li><a href="/manuals/2.2.3/5/5_-_Extending_Cobbler.html">5 - Extending Cobbler</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/5/1_-_Triggers.html">5.1 - Triggers</a></li><li><a href="/manuals/2.2.3/5/5/2_-_Modules.html">5.2 - Modules</a></li><li><a href="/manuals/2.2.3/5/5/3_-_Extending_Cheetah.html">5.3 - Extending Cheetah</a></li></ul><li><a href="/manuals/2.2.3/5/6_-_Power_Management.html">6 - Power Management</a></li><li><a href="/manuals/2.2.3/5/7_-_Alternative_Template_Formats.html">7 - Alternative Template Formats</a></li><li><a href="/manuals/2.2.3/5/8_-_Multi-Homed_Cobbler_Server.html">8 - Multi-Homed Cobbler Server</a></li><li><a href="/manuals/2.2.3/5/9_-_Memtest.html">9 - Memtest</a></li><li><a href="/manuals/2.2.3/5/10_-_Virtual_Image_Cloning.html">10 - Virtual Image Cloning</a></li><li><a href="/manuals/2.2.3/5/11_-_Auto-Registration.html">11 - Auto-Registration</a></li><li><a href="/manuals/2.2.3/5/12_-_Booting_Live_CDs.html">12 - Booting Live CDs</a></li><li><a href="/manuals/2.2.3/5/13_-_Clonezilla_Integration.html">13 - Clonezilla Integration</a></li><li><a href="/manuals/2.2.3/5/14_-_Batch_Editing.html">14 - Batch Editing</a></li><li><a href="/manuals/2.2.3/5/15_-_Moving_to_a_New_Server.html">15 - Moving to a New Server</a></li><li><a href="/manuals/2.2.3/5/16_-_PXE-boot_Menu_Passwords.html">16 - PXE-boot Menu Passwords</a></li><li><a href="/manuals/2.2.3/5/17_-_System_Retirement.html">17 - System Retirement</a></li><li><a href="/manuals/2.2.3/5/18_-_Alternative_Storage_Backends.html">18 - Alternative Storage Backends</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/18/1_-_CouchDB.html">18.1 - CouchDB</a></li><li><a href="/manuals/2.2.3/5/18/2_-_MongoDB.html">18.2 - MongoDB</a></li></ul></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/5/1_-_Advanced_Networking.html">1 - Advanced Networking</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/1/1_-_Bonding.html">1.1 - Bonding</a></li><li><a href="/manuals/2.2.3/5/1/2_-_VLANs.html">1.2 - VLANs</a></li><li><a href="/manuals/2.2.3/5/1/3_-_Bridging.html">1.3 - Bridging</a></li></ul><li><a href="/manuals/2.2.3/5/2_-_SELinux.html">2 - SELinux</a></li><li><a href="/manuals/2.2.3/5/3_-_Configuration_Management.html">3 - Configuration Management</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/3/1_-_Built-In_Configuration_Management.html">3.1 - Built-In Configuration Management</a></li><li><a href="/manuals/2.2.3/5/3/2_-_Puppet_Integration.html">3.2 - Puppet Integration</a></li><li><a href="/manuals/2.2.3/5/3/3_-_Func_Integration.html">3.3 - Func Integration</a></li></ul><li><a href="/manuals/2.2.3/5/4_-_Anaconda_Monitoring.html">4 - Anaconda Monitoring</a></li><li><a href="/manuals/2.2.3/5/5_-_Extending_Cobbler.html">5 - Extending Cobbler</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/5/1_-_Triggers.html">5.1 - Triggers</a></li><li><a href="/manuals/2.2.3/5/5/2_-_Modules.html">5.2 - Modules</a></li><li><a href="/manuals/2.2.3/5/5/3_-_Extending_Cheetah.html">5.3 - Extending Cheetah</a></li></ul><li><a href="/manuals/2.2.3/5/6_-_Power_Management.html">6 - Power Management</a></li><li><a href="/manuals/2.2.3/5/7_-_Alternative_Template_Formats.html">7 - Alternative Template Formats</a></li><li><a href="/manuals/2.2.3/5/8_-_Multi-Homed_Cobbler_Servers.html">8 - Multi-Homed Cobbler Servers</a></li><li><a href="/manuals/2.2.3/5/9_-_Memtest.html">9 - Memtest</a></li><li><a href="/manuals/2.2.3/5/10_-_Virtual_Image_Cloning.html">10 - Virtual Image Cloning</a></li><li><a href="/manuals/2.2.3/5/11_-_Auto-Registration.html">11 - Auto-Registration</a></li><li><a href="/manuals/2.2.3/5/12_-_Booting_Live_CDs.html">12 - Booting Live CDs</a></li><li><a href="/manuals/2.2.3/5/13_-_Clonezilla_Integration.html">13 - Clonezilla Integration</a></li><li><a href="/manuals/2.2.3/5/14_-_Batch_Editing.html">14 - Batch Editing</a></li><li><a href="/manuals/2.2.3/5/15_-_Moving_to_a_New_Server.html">15 - Moving to a New Server</a></li><li><a href="/manuals/2.2.3/5/16_-_PXE-boot_Menu_Passwords.html">16 - PXE-boot Menu Passwords</a></li><li><a href="/manuals/2.2.3/5/17_-_System_Retirement.html">17 - System Retirement</a></li><li><a href="/manuals/2.2.3/5/18_-_Alternative_Storage_Backends.html">18 - Alternative Storage Backends</a></li><ul class="dirtree"><li><a href="/manuals/2.2.3/5/18/1_-_CouchDB.html">18.1 - CouchDB</a></li><li><a href="/manuals/2.2.3/5/18/2_-_MongoDB.html">18.2 - MongoDB</a></li></ul><li><a href="/manuals/2.2.3/5/19_-_Using_gPXE.html">19 - Using gPXE</a></li><li><a href="/manuals/2.2.3/5/20_-_Data_Revision_Control.html">20 - Data Revision Control</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h1>Power Management</h1>
 
-<p>Cobbler allows for linking your power management systems with
-cobbler, making it very easy to make changes to your systems when
-you want to reinstall them, or just use it to remember what the
-power management settings for all of your systems are. For
-instance, you can just change what profile they should run and flip
-their power states to begin the reinstall!</p>
-
-<h2>What's Supported</h2>
-
-<p>All of the following modes are supported. Most all of them use the
-fence scripts internally so you will want fence installed. This is
-part of the 'cman' package for some distributions, though it's
-fence-agents in Fedora 11 and later (which cobbler has as a
-dependency on that OS for newer versions).</p>
-
-<pre><code>bullpap
-wti
-apc_snmp
-ether_wake
-ipmilan
-drac
-ipmitool
-ilo
-rsa
-lpar
-bladecenter
-</code></pre>
-
-<h2>Example of Set Up</h2>
-
-<p>You have a WTI powerbar. Define that system foo is a part of that
-powerbar on plug 7</p>
-
-<pre><code>cobbler system edit --name foo --power-type=wti --power-address=foo-mgmt.example.org --power-user Administrator --power-pass PASSWORD --power-id 7
-</code></pre>
-
-<p>You have a DRAC based blade:</p>
-
-<pre><code>cobbler system edit --name blade7 --power-type=drac --power-address=blade-mgmt.example.org --power-user Administrator --power-pass=PASSWORD --power-id blade7
-</code></pre>
-
-<p>You have an IPMI based system:</p>
-
-<pre><code>cobbler system edit --name foo --power-type=ipmi --power-address=foo-mgmt.example.org --power-user Administrator --power-pass=PASSWORD
-</code></pre>
-
-<p>You have a IBM HMC managed system:</p>
-
-<pre><code>cobbler system edit --name 9115-505 --power-type=lpar --power-address=ibm-hmc.example.org --power-user hscroot --power-pass=PASSWORD --power-id system:partition
-</code></pre>
-
-<blockquote><p><strong>NOTE</strong>: The <em>--power-id</em> option is used to indicate <strong>both</strong> the
-managed system name and a logical partition name. Since an IBM HMC
-is responsible for managing more than one system, you must supply
-the managed system name and logical partition name separated by a
-colon (':') in the --power-id command-line option.</p></blockquote>
-
-<p>You have an IBM Bladecenter:</p>
-
-<pre><code>cobbler system edit --name blade-06 --power-type=bladecenter --power-address=blademm.example.org --power-user USERID --power-pass=PASSW0RD --power-id 6
-</code></pre>
-
-<blockquote><p><strong>NOTE</strong>: The <em>--power-id</em> option is used to specify what slot your
-blade is connected.</p></blockquote>
-
-<h2>Data Entry</h2>
-
-<p>Tip: to make life easier, you can use
-cobbler find + xargs <a href="Command%20Line%20Search">CommandLineSearch</a>
-to batch populate the settings for lots of systems.</p>
-
-<h2>Defaults</h2>
-
-<p>If --power-user and --power-pass are left blank, the values of
-default_power_user and default_power_pass will be loaded from
-cobblerd's environment at the time of usage.</p>
-
-<p>--power-type also has a default value in /etc/cobbler/settings,
-initially set to "ipmi".</p>
-
-<h2>Using the Power Management Features</h2>
-
-<p>Assigning A System To Be Installed To A New Profile</p>
-
-<pre><code>cobbler system edit --name=foo --netboot-enabled=1 --profile=install-this-profile-name-instead
-</code></pre>
-
-<p>Powering Off A System</p>
-
-<pre><code>cobbler system poweroff --name=foo
-</code></pre>
-
-<p>Powering On A System</p>
-
-<pre><code>cobbler system poweron --name=foo
-</code></pre>
-
-<p>Rebooting A System (if netboot-enabled is turned on, it will now
-reinstall to the new profile -- assuming PXE is working)</p>
-
-<pre><code>cobbler system reboot --name=foo
-</code></pre>
-
-<p>Since not all power management systems support reboot, this is a
-"power off, sleep for 1 second, and power on" operation.</p>
-
-<h2>Web App Integration</h2>
-
-<p>Systems can be power cycled through the systems page of the web
-application, even if they are on different power management
-systems. See <a href="/cobbler/wiki/CobblerWeb">CobblerWeb?</a> for more
-details.</p>
-
-<h2>Implementation</h2>
-
-<p>The individual command syntaxes are generated from Cheetah
-templates in /etc/cobbler/power in case you need to modify the
-commands or add additional options. You can also add new power
-types if you like if you are using Cobbler 2.0 and later, just by
-making new files in that directory.</p>
-
-<h2>Important: Security Implications</h2>
-
-<p>Storing the power control usernames and passwords in Cobbler means
-that information is essentially public (this data is available via
-XMLRPC without access control), therefore you will want to control
-what machines have network access to contact the power management
-devices if you use this feature (such as /only/ the cobbler
-machine, and then control who has local access to the cobbler
-machine). Also do not reuse important passwords for your power
-management devices. If this concerns you, you can still use this
-feature, just don't store the username/password in Cobbler for your
-power management devices.</p>
-
-<p>If you are not going to to store power control passwords in
-Cobbler, leave the username and password fields blank.</p>
-
-<p>Cobbler will first try to source them from it's environment using
-the COBBLER_POWER_USER and COBBLER_POWER_PASS variables.</p>
-
-<p>This may also be too insecure for some, so in this case, don't set
-these, and supply --power-user and --power-pass when running
-commands like "cobbler system poweron" and "cobbler system
-poweroff". The values used on the command line are always used,
-regardless of the value stored in Cobbler or the environment, if so
-provided.</p>
-
-<pre><code>cobbler system poweron --name=foo --power-user=X --power-pass=Y
-</code></pre>
-
-<p>Be advised of current limitations in storing passwords, make your
-choices accordingly and in relation to the ease-of-use that you
-need, and secure your networks appropriately.</p>
+<p>Coming soon... The Power Management features in Cobbler were completely rewritten in 2.2.3, so the old documentation is no longer accurate.</p>
 
      <div id="push"></div> <!-- push -->
     </div> <!-- content -->
