--- a/manuals/2.2.3/4/4_-_Kickstart_Templating.html
+++ b/manuals/2.2.3/4/4_-_Kickstart_Templating.html
@@ -293,7 +293,7 @@ see in cobbler command line options.</p>
 <p>To make this a bit more clear, look at the following system add
 command:</p>
 
-<pre><code>cobbler system add --name=spartacus --profile=f10webserver-i386 --ip=192.168.50.5 --mac=AA:BB:CC:DD:EE:FF --hostname=spartacus.example.org
+<pre><code>cobbler system add --name=spartacus --profile=f10webserver-i386 --ip-address=192.168.50.5 --mac=AA:BB:CC:DD:EE:FF --hostname=spartacus.example.org
 </code></pre>
 
 <p>For the above command, assuming the kickstart template for
