--- a/manuals/2.2.3/5_-_Advanced_Topics.html
+++ b/manuals/2.2.3/5_-_Advanced_Topics.html
@@ -148,7 +148,7 @@ function close_results() {
 
 <p>It is also possible to control the default behavior for a specific network:</p>
 
-<pre><code>cobbler system add --name=network1 --ip=192.168.0.0/24 --profile=boot_this
+<pre><code>cobbler system add --name=network1 --ip-address=192.168.0.0/24 --profile=boot_this
 </code></pre>
 
 <h3>Preventing boot loops</h3>
