--- a/manuals/2.2.3/5/12_-_Booting_Live_CDs.html
+++ b/manuals/2.2.3/5/12_-_Booting_Live_CDs.html
@@ -146,7 +146,7 @@ cobbler profile add --name=liveF9 --distro=liveF9
 
 <p>For instance, if we wanted to deploy the live image to all machines on a specific subnet we could do it as follows:</p>
 
-<pre><code>cobbler system add --name=live_network --ip=123.45.00.00/24 --profile=liveF9
+<pre><code>cobbler system add --name=live_network --ip-address=123.45.00.00/24 --profile=liveF9
 </code></pre>
 
 <p>Or of course we could just deploy it to a specific system:</p>
