--- a/manuals/2.2.3/9/Hints-redhat.html
+++ b/manuals/2.2.3/9/Hints-redhat.html
@@ -108,7 +108,7 @@ function close_results() {
 
     </div> <!-- leftcol -->
     <div id="rightcol">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/9/Debugging-tips.html">Debugging-tips</a></li><li><a href="/manuals/2.2.3/9/Hints-redhat.html">Hints-redhat</a></li><li><a href="/manuals/2.2.3/9/Virtualization-troubleshooting.html">Virtualization-troubleshooting</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/9/Hints-redhat.html">Hints-redhat</a></li><li><a href="/manuals/2.2.3/9/Debugging-tips.html">Debugging-tips</a></li><li><a href="/manuals/2.2.3/9/Virtualization-troubleshooting.html">Virtualization-troubleshooting</a></li></ul></div>
     </div> <!-- rightcol -->
     <div id="content">
 <h1>Cobbler Manual</h1>
